syntax = "proto3";

package com.agrichain.order;

option java_multiple_files = true;
option java_package = "com.agrichain.order.grpc";
option java_outer_classname = "OrderServiceProto";

// Order gRPC service definition (for internal communication)
service OrderService {
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse);
}

message GetOrderRequest {
  string order_id = 1;
}

message GetOrderResponse {
  Order order = 1;
}

message UpdateOrderStatusRequest {
  string order_id = 1;
  OrderStatus status = 2;
}

message UpdateOrderStatusResponse {
  bool success = 1;
  string message = 2;
}

message Order {
  string order_id = 1;
  string customer_id = 2;
  repeated OrderItem items = 3;
  OrderStatus status = 4;
  double total_amount = 5;
  int64 created_at = 6;
}

message OrderItem {
  string product_id = 1;
  string product_name = 2;
  int32 quantity = 3;
  double price = 4;
}

enum OrderStatus {
  PENDING = 0;
  CONFIRMED = 1;
  INVENTORY_RESERVED = 2;
  PAYMENT_PROCESSING = 3;
  PAID = 4;
  SHIPPED = 5;
  DELIVERED = 6;
  CANCELLED = 7;
  FAILED = 8;
}
